--- a/embeddings/package.json
+++ b/embeddings/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register --env-file=.env src/emb/data.ts"
+    "start": "node -r ts-node/register --env-file=.env src/emb/similar.ts"
   },
   "keywords": [],
   "author": "",
