--- a/embeddings/package.json
+++ b/embeddings/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register --env-file=.env src/emb/similar.ts"
+    "start": "node -r ts-node/register --env-file=.env src/chroma/Client.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^2.0.1",
-    "chromadb": "^1.8.1",
+    "chromadb": "^1.9.2",
     "openai": "^4.26.0"
   }
 }
