OpenAi Embeddings in ChromaDB

--- a/embeddings/package.json
+++ b/embeddings/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^2.0.1",
-    "chromadb": "^1.9.2",
+    "chromadb": "^1.8.1",
+    "dotenv": "^16.4.5",
     "openai": "^4.26.0"
   }
 }
