--- a/embeddings/package.json
+++ b/embeddings/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register --env-file=.env src/chroma/RelevantInfo.ts"
+    "start": "node -r ts-node/register --env-file=.env src/pinecone/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@pinecone-database/pinecone": "^2.0.1",
+    "@pinecone-database/pinecone": "^2.2.2",
     "chromadb": "^1.8.1",
     "dotenv": "^16.4.5",
     "openai": "^4.26.0"
