--- a/langchain/package.json
+++ b/langchain/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register --env-file=.env src/rag/Web.ts"
+    "start": "node -r ts-node/register --env-file=.env src/rag/Pdf.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "@langchain/core": "^0.3.18",
     "@langchain/openai": "^0.3.13",
     "cheerio": "^1.0.0",
-    "langchain": "^0.3.5"
+    "langchain": "^0.3.5",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
